Minor tweaks to 6 and 7

--- a/website/lectures/lecture06.qmd
+++ b/website/lectures/lecture06.qmd
@@ -8,11 +8,13 @@ execute:
 
 ## Overview: Allocation of credit in baseball
 
-The first game of the 2024 MLB Regular Season, between the Los Angeles Dodgers and the San Diego Padres, took place on March 20, 2024[^korea]
+The first game of the 2024 MLB Regular Season, between the Los Angeles Dodgers and the San Diego Padres, took place on March 20, 2024[^korea] 
 During the game, Shohei Ohtani recorded [two hits in his five plate appearances](https://www.mlb.com/video/shohei-ohtani-records-two-hits-rbi-in-dodgers-debut):
 
-  1. In the top of the 3rd inning, with 2 outs and no runners on base, Ohtani singled into right field.
-  2. In the top of the 8th inning, with 1 out and runners on first and second base, Ohtani singled into left center field, driving in one run.
+[^korea]: This was also the first MLB game ever played in South Korea!
+
+  1. In the 3rd inning, with 2 outs and no runners on base, Ohtani singled into right field.
+  2. In the 8th inning, with 1 out and runners on first and second base, Ohtani singled into left center field, driving in one run.
 
 Which of these singles was most valuable to Dodgers? And how much of that value should be credited to Ohtani specifically?
 
@@ -364,7 +366,7 @@ If `get_lineup()` throws an error (e.g., because the batting orders for a partic
 To avoid having to manually remove problematic games and re-start the loop, we will use `purrr:possibly()` to create a version of `get_lineup()` that returns `NULL` when it hits an error.
 We will also use `purrr:map` instead of writing an explict for loop.
 
-:::{.callout-warning}
+:::{.callout-important}
 
 ## Warning
 The following code takes about an hour to run. 
