--- a/website/lectures/lecture07.qmd
+++ b/website/lectures/lecture07.qmd
@@ -1,6 +1,8 @@
 ---
 title: "Lecture 7: Wins Above Replacement I"
 format: html
+execute: 
+  cache: true
 ---
 
 ## Recap & Roadmap
@@ -144,7 +146,7 @@ atbat2024 |>
 ```
 
 Instead of "binning and averaging", like we did with our [distance-based XG models in Lecture 3](lecture03.qmd#sec-logit), we will fit a statistical model.
-A natural starting model asserts that there are numbers $\alpha_{0.000}, \ldots, \alpha_{2.111}$ and $\alpha_{\textrm{catcher_interf}}, \ldots, \alpha_{\textrm{walk}}$ such that for all game states $\textrm{g}$ and ending events $\textrm{e},$
+A natural starting model asserts that there are numbers $\alpha_{0.000}, \ldots, \alpha_{2.111}$ and $\alpha_{\textrm{catcher\_interf}}, \ldots, \alpha_{\textrm{walk}}$ such that for all game states $\textrm{g}$ and ending events $\textrm{e},$
 $$
 \mathbb{E}[\delta \vert \textrm{g}, \textrm{e}] = \alpha_{\textrm{g}} + \alpha_{\textrm{e}}.
 $$
